Fixed visual bugs on mobile

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -62,7 +62,7 @@
 }
 
 .hidden-gradient {
-  opacity: 0;
+  display: none;
 }
 
 @keyframes App-logo-spin {
@@ -126,6 +126,11 @@
   transform: translateY(-185%);
 }
 
+.card-content {
+  margin-left: 12.5%;
+  margin-right: 12.5%;
+}
+
 .hidden {
   opacity: 0;
   filter: blue(3rem);
@@ -137,16 +142,6 @@
 @media (prefers-reduced-motion) {
   .hidden {
     transition: none;
-  }
-}
-
-@media only screen and (max-width: 1000px) {
-  .hidden {
-    opacity: 0;
-    filter: blue(3rem);
-    transform: translateX(-100%);
-    transition-duration: 1s;
-    transition-property: opacity, filter, transform;
   }
 }
 
@@ -215,6 +210,32 @@
 }
 
 @media only screen and (max-width: 1000px) {
+  .card-title {
+    text-align: left;
+    font-weight: bold;
+    margin-right: 30%;
+  }
+
+  .card-text {
+    text-align: left;
+  }
+
+  .card-content {
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  .gradient {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 150px; /* Adjust the height as needed */
+    background: transparent;
+    z-index: 1;
+    transition-duration: 300ms;
+  }
+
   .mobile {
     margin-left: 4.5vw;
     margin-right: 4.5vw;
@@ -259,6 +280,14 @@
 
   .project {
     width: 100%;
+  }
+
+  .hidden {
+    opacity: 0;
+    filter: blue(3rem);
+    transform: translateX(-100%);
+    transition-duration: 1s;
+    transition-property: opacity, filter, transform;
   }
 
   .show {
